# lego_ros_droid

./: CMakeLists.txt  README.md  Robot3_controller.py  Robot3_viewer.py  package.xml
config/: my_controllers.yaml  ps.config.yaml  ps4.config.yaml  ps4_joystick.yaml  steamdeck.config.yaml
description/: chassis.xacro  robot.urdf.xacro  ros2_control.xacro
euclidean_tsp/: in1.txt  main.py  tsp.py
euclidean_tsp/graph/: graph.py
launch/: gazebo_sim.launch.py  ps4_joy.launch.py  ps4_joystick.launch.py  ps_joy.launch.py  rsp.launch.py  steam_joy.launch.py
learning/: gridbot.py  gridbot_viewer.py  lego_droid.py
lrd_drive/: buildhat_driver.py  diff_drive_kinematics.py  diff_drive_odom.py  diffdrive_kinematics.py  diffdrive_odom.py
lrd_drive/config/: diff_drive_description.yaml
lrd_state_machine/autonomy_algo/: package.xml  setup.cfg  setup.py
lrd_state_machine/autonomy_gui/: gui.py
lrd_state_machine/autonomy_interface/: CMakeLists.txt  package.xml
lrd_state_machine/autonomy_servers/drive_to_gps/: package.xml  setup.cfg  setup.py
lrd_state_machine/autonomy_servers/drive_to_gps/drive_to_gps/: drive_to_gps.py
lrd_state_machine/autonomy_servers/drive_to_gps/drive_to_gps/tests/: drive_to_gps_test.py
lrd_state_machine/autonomy_states/: package.xml  setup.cfg  setup.py
lrd_system/: CMakeLists.txt  package.xml
lrd_system/config/: my_controllers.yaml  ps.config.yaml
lrd_system/description/: chassis.xacro  gazebo.xacro  materials.xacro  robot.urdf.xacro  (+2 more)
test_scripts/: buildhat_driver.py  cpptest.cpp  diff_drive_kinematics.py  main.py  pytest.py
(+96 files in other folders)
